<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="10dp">

    <CheckBox
            android:id="@+id/monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/monday_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <CheckBox
            android:id="@+id/tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/tuesday_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <CheckBox
            android:id="@+id/wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/wednesday_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <CheckBox
            android:id="@+id/thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/thursday_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <CheckBox
            android:id="@+id/friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/friday_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <CheckBox
            android:id="@+id/saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/saturday_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <CheckBox
            android:id="@+id/sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/sunday_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    ¡

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/cancelBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/btn_cancel"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/saveBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/white"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/btn_ok"
                android:textColor="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cancelBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
