<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:background="#F1F1F1"
            app:layout_constraintHorizontal_bias="1.0"
            android:id="@+id/scrollView"
            android:layout_marginBottom="50dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1.0">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content"
                                                           android:orientation="vertical"
                                                           android:id="@+id/ConstraintLayout">
            <TextView
                    android:text="18時間13分後に設定されています。"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/timeLagText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" android:background="@color/colorView"
                    android:gravity="center" android:padding="5dp"/>
            <View
                    android:layout_width="0dp"
                    android:layout_height="65dp"
                    android:id="@+id/timeView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp" android:background="@color/colorView"
                    app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/timeLagText"
                    android:layout_marginTop="1dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/timeTitle"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="@+id/timeView"
                    app:layout_constraintTop_toTopOf="@+id/timeView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" android:text="@string/time_title"
                    app:layout_constraintBottom_toBottomOf="@+id/timeView" android:layout_marginStart="16dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/timeText"
                    app:layout_constraintEnd_toEndOf="@+id/timeView"
                    app:layout_constraintTop_toTopOf="@+id/timeView"
                    android:text="00:00"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/timeView"
                    app:layout_constraintBottom_toBottomOf="@+id/timeView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textSize="40sp"/>
            <View
                    android:layout_width="0dp"
                    android:layout_height="65dp" android:id="@+id/repetitionView"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/timeView" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp" android:background="@color/colorView"/>
            <TextView
                    android:text="@string/repetition_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/repetitionTitle"
                    app:layout_constraintTop_toTopOf="@+id/repetitionView"
                    app:layout_constraintBottom_toBottomOf="@+id/repetitionView"
                    app:layout_constraintStart_toStartOf="@+id/repetitionView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginStart="16dp"/>
            <TextView
                    android:text="繰り返しなし"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/repetitionText"
                    app:layout_constraintTop_toTopOf="@+id/repetitionView"
                    app:layout_constraintBottom_toBottomOf="@+id/repetitionView"
                    app:layout_constraintEnd_toEndOf="@+id/repetitionView"
                    android:layout_marginRight="16dp" android:layout_marginEnd="16dp"/>
            <View
                    android:layout_width="0dp"
                    android:layout_height="65dp" android:id="@+id/volVibView"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:background="@color/colorView" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/repetitionView"/>
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" app:srcCompat="@drawable/ic_volume_black_24dp"
                    android:id="@+id/volImg"
                    app:layout_constraintTop_toTopOf="@+id/volVibView"
                    app:layout_constraintBottom_toBottomOf="@+id/volVibView"
                    app:layout_constraintStart_toStartOf="@+id/volVibView"
                    android:layout_marginStart="16dp"/>
            <SeekBar
                    android:layout_width="150dp"
                    android:layout_height="wrap_content" android:id="@+id/volSeekbar"
                    app:layout_constraintTop_toTopOf="@+id/volVibView"
                    app:layout_constraintBottom_toBottomOf="@+id/volVibView"
                    app:layout_constraintStart_toEndOf="@+id/volImg"
            />
            <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp" app:srcCompat="@drawable/ic_vibration_black_24dp"
                    android:id="@+id/vibImg"
                    android:rotation="20"
                    app:layout_constraintTop_toTopOf="@+id/volVibView"
                    app:layout_constraintBottom_toBottomOf="@+id/volVibView"
                    app:layout_constraintVertical_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/vibCheckbox"
                    android:layout_marginEnd="5dp"/>
            <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/vibCheckbox"
                    app:layout_constraintTop_toTopOf="@+id/volVibView"
                    app:layout_constraintBottom_toBottomOf="@+id/volVibView"
                    app:layout_constraintEnd_toEndOf="@+id/volVibView"
                    android:scaleX="1.3"
                    android:scaleY="1.3" android:layout_marginEnd="16dp"/>
            <View
                    android:layout_width="0dp"
                    android:layout_height="200dp" android:id="@+id/SpeakView"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/volVibView"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp" android:background="@color/colorView"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <TextView
            android:text="@string/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="50dp" android:id="@+id/okBtn"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.5" app:layout_constraintEnd_toStartOf="@+id/cancelBtn"
            android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="@color/colorBtn"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="50dp" android:id="@+id/cancelBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintWidth_percent="0.5"
            android:gravity="center" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:background="@color/colorBtn" android:text="@string/btn_ok"/>
    <View
            android:layout_width="2dp"
            android:layout_height="40dp"
            android:id="@+id/separator"
            app:layout_constraintTop_toTopOf="@+id/okBtn"
            app:layout_constraintBottom_toBottomOf="@+id/okBtn" app:layout_constraintEnd_toStartOf="@+id/cancelBtn"
            app:layout_constraintStart_toStartOf="@+id/cancelBtn" android:background="@color/colorSeparator"/>
</androidx.constraintlayout.widget.ConstraintLayout>
